--- a/index.html
+++ b/index.html
@@ -223,13 +223,11 @@
             <small>My Skills</small>
             <h3>Beautiful & Unique Digital Experiences</h3>
             <p class="text-muted">
-              Nostrum exercitationem ullam corporis suscipit laborioa nisi ut
-              aliquid exrea commodi consequatur magni dolores aos qui ratione
-              voluptatem nesciunt.
+              Building Smart, Seamless Digital Solutions
+Through my journey of learning HTML & CSS, Java, Python, and C, I’ve developed a strong foundation in both front-end and back-end development.
+Each project I work on reflects my passion for clean code, problem-solving, and creating user-friendly digital experiences with both logic and creativity.
             </p>
             <p class="text-muted">
-              Quia voluptas sit aspernatur aut odit aut fugit, sed ruiano
-              consequntar magni dolores.
             </p>
             <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
               <!-- here download attribute is used for adding download functionality to button  -->
